<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28C7F5"
    tools:context=".Quiz09">

    <TextView
        android:id="@+id/head1"
        android:layout_width="512dp"
        android:layout_height="111dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/_9_5_input"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ImageButton
        android:id="@+id/btna9"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/ms"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"
        app:srcCompat="@drawable/qa9" />

    <ImageButton
        android:id="@+id/btnb9"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/ora"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"
        app:srcCompat="@drawable/qb9" />

    <ImageButton
        android:id="@+id/btnans9"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/jb"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        app:srcCompat="@drawable/qans9" />

    <ImageButton
        android:id="@+id/btnc9"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/go"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        app:srcCompat="@drawable/qc9" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="397dp"
        android:layout_height="406dp"
        android:contentDescription="@string/qcode9"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        app:srcCompat="@drawable/qcode9" />


</androidx.constraintlayout.widget.ConstraintLayout>