<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28C7F5"
    tools:context=".Quiz10ans">

    <ImageButton
        android:id="@+id/btna10"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/ms"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        app:srcCompat="@drawable/qa10" />

    <ImageButton
        android:id="@+id/btnb10"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/ora"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        app:srcCompat="@drawable/qb10" />

    <ImageButton
        android:id="@+id/btnans10"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/jb"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685"
        app:srcCompat="@drawable/qans10" />

    <ImageButton
        android:id="@+id/btnc10"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/go"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685"
        app:srcCompat="@drawable/qc10" />


</androidx.constraintlayout.widget.ConstraintLayout>