<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28C7F5"
    tools:context=".Quiz10">

    <Button
        android:id="@+id/btnnext"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:text="@string/btnnext"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <TextView
        android:id="@+id/head1"
        android:layout_width="515dp"
        android:layout_height="81dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/_10_7_input"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="470dp"
        android:layout_height="384dp"
        android:contentDescription="@string/qcode9"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145"
        app:srcCompat="@drawable/qcode101" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="455dp"
        android:layout_height="479dp"
        android:contentDescription="@string/qcode9"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        app:srcCompat="@drawable/qcode102" />


</androidx.constraintlayout.widget.ConstraintLayout>